# Trials

./: .gitignore  README.md
Data-Structure/List/: README
Data-Structure/List/inc/FList/: FList.hpp
Data-Structure/List/inc/FNode/: FNode.hpp
Data-Structure/List/src/FList/: FList.cpp
Data-Structure/List/src/FNode/: FNode.cpp
Data-Structure/List/test/: main.cpp
Data-Structure/List/tools/: CMakeLists.txt
Data-Structure/unordered-map/: README
Data-Structure/unordered-map/inc/unordered-map/: umap.hpp
Data-Structure/unordered-map/src/unordered-map/: umap.cpp
Data-Structure/unordered-map/test/: main.cpp
Data-Structure/unordered-map/tools/: CMakeLists.txt
IPC/: README.references
IPC/1-named_pipe/: fifo_reader.c  fifo_writer.c
IPC/1-unnammed_pipe/: ipc_unpipe.c
IPC/2-msg_q/: queue.h  rec.c  send.c
IPC/3-socket-based/INET/: client.c  server.c
IPC/3-socket-based/UNIX/: client.c  connection.h  server.c
IPC/3-socket-based/myUNIX/DGRAM/: client.c  server.c
IPC/3-socket-based/myUNIX/STREAM/: client.c  server.c
